--- a/data/feats/ancestry-05-GZrvQo5FcoP5qocX.htm
+++ b/data/feats/ancestry-05-GZrvQo5FcoP5qocX.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your wound yawns open, appalling your attacker.
-Avantage: Votre blessure s'ouvre en baillant, effrayant votre agresseur.
+Avantage: La vue des blessures qu'il vous inflige révulse votre agresseur.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -17,4 +17,4 @@ Avantage: Votre blessure s'ouvre en baillant, effrayant votre agresseur.
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Une créature dont vous êtes conscient vous fait subir des dégâts avec une Frappe au corps-à-corps.</p>
 <hr />
-<p>Vos blessures sont grandes ouvertes, révolntant votre agresseur. L'agresseur doit réussir un jet de Vigueur contre le plus élevé entre votre DD de classe ou un DD de sort ou devient @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 (Malade 2 sur un échec critique). Il ne peut récupérer de la condition Malade tant qu'il est adjacent à vous.</p>
+<p>Vos blessures s'ouvrent en baillant, révulsant votre agresseur. L'agresseur doit réussir un jet de Vigueur contre le plus élevé entre votre DD de classe ou votre DD de sort ou devient @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 (Malade 2 sur un échec critique). Il ne peut récupérer de la condition Malade tant qu'il est adjacent à vous.</p>
