--- a/data/feats/ancestry-05-HCxmS8QGHL5O7LUf.htm
+++ b/data/feats/ancestry-05-HCxmS8QGHL5O7LUf.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can enhance your senses and mental state to consider every aspect of an attack.
-Avantage: Vous pouvez améliorer vos sens et votre état mental afin d'envisager tous les aspects d'une attaque.
+Avantage: Vous pouvez lancer Coup au but une fois par jour.
 
 ------ Description (en) ------
 <p>You can enhance your senses and mental state to consider every aspect of an attack. You can cast @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{True Strike} as a divine innate spell once per day.</p>
