--- a/data/feats/ancestry-05-I3EMC4pqkEWrodpq.htm
+++ b/data/feats/ancestry-05-I3EMC4pqkEWrodpq.htm
@@ -1,9 +1,12 @@
 Name: Practiced Paddler
 Nom: Pagayeur accompli
 PrereqEN: paddler shoony
-Avantage:
 PrereqFR: Shoony pagayeur
 État: libre
+
+------ Benefits and spoiler ----
+Benefits:
+Avantage: Vous obtenez une Vitesse de nage de 4,5 m.
 
 ------ Description (en) ------
 <p>You're skilled at navigating bogs and marshes, even for a paddler shoony. You gain a swim Speed of 15 feet.</p>
