--- a/data/feats/ancestry-05-IUVzB39pRVyBFOEx.htm
+++ b/data/feats/ancestry-05-IUVzB39pRVyBFOEx.htm
@@ -2,12 +2,11 @@ Name: Elemental Bulwark
 Nom: Fortification élémentaire
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You call upon the corresponding elements of your suli heritage to resist the effect.
-Avantage: Vous faites appel aux éléments correspondants de votre héritage suli pour résister à l'effet.
+Avantage: Vous obtenez une résistance 5 contre certains dégâts d'énergie élémentaire.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An enemy is about to damage you with cold, electricity, or fire, or with a spell that has the air, earth, fire, or water trait.</p><hr />
