--- a/data/feats/ancestry-05-IY86Kvopp4ACuQsw.htm
+++ b/data/feats/ancestry-05-IY86Kvopp4ACuQsw.htm
@@ -6,7 +6,7 @@ PrereqFR: Crocs aiguisés
 
 ------ Benefits and spoiler ----
 Benefits: You envenom your fangs.
-Avantage: Vous envenimez vos crocs.
+Avantage: la prochaine Frappe avec vos crocs inflige 1d6 points de dégâts de poison.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> a number of times per day equal to your level</p>
