--- a/data/feats/ancestry-05-IsNs6hXQm9pJcXB1.htm
+++ b/data/feats/ancestry-05-IsNs6hXQm9pJcXB1.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can perform simple Interact actions with your shadow, such as opening an unlocked door.
-Avantage: Vous pouvez effectuer des actions simples d'interaction avec votre ombre, comme ouvrir une porte déverrouillée.
+Avantage: Votre ombre peut accomplir des actions d'interaction simples.
 
 ------ Description (en) ------
 <p>You can perform simple Interact actions with your shadow, such as opening an unlocked door. Anything your shadow Interacts with must be within your reach. Your shadow can’t perform actions that require significant manual dexterity, including any action that would require a check to accomplish, and you can’t use it to hold items.</p>
