--- a/data/feats/ancestry-05-iCzJRywykSFwLto0.htm
+++ b/data/feats/ancestry-05-iCzJRywykSFwLto0.htm
@@ -6,9 +6,9 @@ PrereqFR: Familiarité avec les armes des vanths
 
 ------ Benefits and spoiler ----
 Benefits: You've trained in the finer points of dealing death.
-Avantage: Tu t'es entraîné aux points les plus fins de la gestion de la mort.
+Avantage: En cas de coup critique, vous appliquez l'effet critique spécialisé si vous utilisez un bô, un arc long, un arc long composite, un bâton ou une faux.
 
 ------ Description (en) ------
 <p>You’ve trained in the finer points of dealing death. Whenever you critically hit using a bo staff, longbow, composite longbow, scythe, or staff, you apply the weapon’s critical specialization effect.</p>
 ------ Description (fr) ------
-<p>Vous êtes entraîné dans la manière la plus délicate d'infliger la mort. Lorsque vous infligez un coup critique en utilisant un bô, un arc long, un arc long composite, un bâtons ou une faux vous appliquez l'effet du critique de spécialisation.</p>
+<p>Vous êtes entraîné dans la manière la plus délicate d'infliger la mort. Lorsque vous infligez un coup critique en utilisant un bô, un arc long, un arc long composite, un bâton ou une faux vous appliquez l'effet du critique de spécialisation.</p>
