--- a/data/feats/ancestry-05-j0mlvJcuYGFuMG2S.htm
+++ b/data/feats/ancestry-05-j0mlvJcuYGFuMG2S.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: In stressful circumstances, you find strength in your allies' example.
-Avantage: Dans des circonstances stressantes, vous trouvez la force dans vos alliés' ; exemple.
+Avantage: Vous faites le jet de sauvegarde en utilisant le modificateur d'un allié adjacent.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
