--- a/data/feats/ancestry-05-JvTSfyCkG70bmY7f.htm
+++ b/data/feats/ancestry-05-JvTSfyCkG70bmY7f.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your lethal unarmed attacks leave bloody gouges or cause severe internal bleeding.
-Avantage: Vos attaques mortelles sans arme laissent des entailles sanglantes ou provoquent de graves hémorragies internes.
+Avantage: Vos attaques létales à mains nues infligent 1d4 dégâts de saignement persistants en cas de coups critiques.
 
 ------ Description (en) ------
 <p>Your lethal unarmed attacks leave bloody gouges or cause severe internal bleeding. When you critically hit with a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} using an unarmed attack that isn't nonlethal, the target takes [[/r 1d4 #persistent bleed]] persistent bleed damage.</p>
@@ -14,4 +14,4 @@ Avantage: Vos attaques mortelles sans arme laissent des entailles sanglantes ou 
 ------ Description (fr) ------
 <p>Vos attaques à mains nues létales laissent des trous sanglants ou provoquent des saignements internes sévères.</p>
 <p>Lorsque vous faites un coup critique avec une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} en utilisant une attaque à mains nues qui n'est pas non létale, la cible subit [[/r 1d4 #saignement persistant]] dégâts de saignement persistants.</p>
-<p>Cela peut être à cause du fait que vous acceptez de subir la pénalité pour pouvoir utiliser le poing pour porter une attaque létale ou parce que vous possédez une attaque à mains nues qui n'a pas le trait non-létal à cause de @Compendium[pf2e.feats-srd.JP5pptkl1Fx1JK4m]{Poings de fer}, de @Compendium[pf2e.feats-srd.M5195FvfCN3X7gi9]{Défenses} ou d'une capacité similaire.</p>
+<p>Cela peut être lié au fait que vous acceptez de subir la pénalité pour pouvoir utiliser votre poing pour porter une attaque létale ou au fait que vous possédez une attaque à mains nues qui n'a pas le trait non-létal à cause de @Compendium[pf2e.feats-srd.JP5pptkl1Fx1JK4m]{Poings de fer}, de @Compendium[pf2e.feats-srd.M5195FvfCN3X7gi9]{Défenses} ou d'une capacité similaire.</p>
