--- a/data/feats/ancestry-05-iliy0ONIb8Hw6muA.htm
+++ b/data/feats/ancestry-05-iliy0ONIb8Hw6muA.htm
@@ -6,7 +6,7 @@ PrereqFR: Homme-lézard des terres humides
 
 ------ Benefits and spoiler ----
 Benefits: You swim faster than most iruxi.
-Avantage: Vous nagez plus vite que la plupart des iruxi.
+Avantage: Votre Vitesse de nage passe à 7,5 m.
 
 ------ Description (en) ------
 <p>You swim faster than most iruxi. Your swim Speed increases to 25 feet.</p>
