--- a/data/feats/ancestry-05-jNrpvEqfncdGZPak.htm
+++ b/data/feats/ancestry-05-jNrpvEqfncdGZPak.htm
@@ -6,11 +6,11 @@ PrereqFR: Chance halfeline
 
 ------ Benefits and spoiler ----
 Benefits: While your willingness to dig into a task you know little about might get you into trouble, your incredible luck often saves you from danger.
-Avantage: Si votre volonté de vous atteler à une tâche dont vous ignorez tout peut vous attirer des ennuis, votre incroyable chance vous sauve souvent du danger.
+Avantage: Vous pouvez effectuer des actions de compétence sans être qualifié.
 
 ------ Description (en) ------
 <p>While your willingness to dig into a task you know little about might get you into trouble, your incredible luck often saves you from danger. You can attempt skill actions that normally require you to be trained even if you aren't trained in that skill. If you use Halfling Luck when you fail a check for a skill with which you are untrained, you can add a proficiency bonus equal to your level, rather than 0, when you reroll the triggering skill check. You gain a +4 circumstance bonus to this rerolled skill check.</p>
 ------ Description (fr) ------
-<p>Lorsque votre volonté de creuser un sujet dans lequel vous connaissez peu de chose devrait vous placer dans les ennuis, votre incroyable chance halfeline vous sauve souvent du danger.</p>
+<p>Alors que votre volonté de creuser un sujet dans lequel vous connaissez peu de chose devrait vous placer dans les ennuis, votre incroyable chance halfeline vous sauve souvent du danger.</p>
 <p>Vous pouvez entreprendre des actions de compétences qui nécessitent habituellement d'être qualifié même si vous ne l'êtes pas dans cette compétence.</p>
-<p>Si vous utilisez Chance halfeline, lorsque vous échouez sur un test de compétence pour un test non entraîné, vous pouvez ajouter un bonus de compétence égal à votre niveau, au lieu de 0, lorsque vous relancez le test de compétence déclencheur. Vous obtenez un bonus de circonstances de +4 à ce test relancé de compétence.</p>
+<p>Si vous utilisez Chance halfeline, lorsque vous échouez sur un test de compétence pour un test inexpérimenté, vous pouvez ajouter un bonus de compétence égal à votre niveau, au lieu de 0, lorsque vous relancez le test de compétence déclencheur. Vous obtenez un bonus de circonstances de +4 à ce test relancé de compétence.</p>
