--- a/data/feats/ancestry-05-KcbSxOPYC5CUqbZQ.htm
+++ b/data/feats/ancestry-05-KcbSxOPYC5CUqbZQ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve learned how to handle situations when you’re out of your depth.
-Avantage: Vous avez appris à gérer les situations où vous n'êtes pas dans votre élément.
+Avantage: Vous gagnez le don Improvisation inexpérimentée et pouvez entreprendre toutes les actions de compétences.
 
 ------ Description (en) ------
 <p>You've learned how to handle situations when you're out of your depth. You gain the Untrained Improvisation general feat. In addition, you can attempt skill actions that normally require you to be trained, even if you are untrained.</p>
