--- a/data/feats/ancestry-05-LAArv2uv6TOkTzQO.htm
+++ b/data/feats/ancestry-05-LAArv2uv6TOkTzQO.htm
@@ -6,7 +6,7 @@ PrereqFR: Abajoues
 
 ------ Benefits and spoiler ----
 Benefits: You are adept at quickly moving items into your cheek pouches.
-Avantage: Vous êtes capable de déplacer rapidement des objets dans vos poches de joue.
+Avantage: Vous Intéragissez pour ranger un objet tenu dans vos abajoues.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
@@ -15,4 +15,4 @@ Avantage: Vous êtes capable de déplacer rapidement des objets dans vos poches 
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par round</p>
 <hr />
-<p>Vous êtes habitué à rapidement déplacer les objets dans vos abajoues. Vous @Compendium[pf2e.actionspf2e.pvQ5rY2zrtPI614F]{Intéragissez} pour ranger un objet tenu dans votre abajoues (pourvu qu'il rentre).</p>
+<p>Vous êtes habitué à rapidement déplacer les objets dans vos abajoues. Vous @Compendium[pf2e.actionspf2e.pvQ5rY2zrtPI614F]{Intéragissez} pour ranger un objet tenu dans vos abajoues (pourvu qu'il rentre).</p>
