--- a/data/feats/ancestry-05-LNyTKhIZlM17026W.htm
+++ b/data/feats/ancestry-05-LNyTKhIZlM17026W.htm
@@ -6,9 +6,10 @@ PrereqFR: Incisives vicieuses
 
 ------ Benefits and spoiler ----
 Benefits: With enough time and determination, you can chew through nearly anything.
-Avantage: Avec suffisamment de temps et de détermination, vous pouvez ronger presque tout.
+Avantage: Vos mâchoires peuvent tout broyer.
 
 ------ Description (en) ------
 <p>With enough time and determination, you can chew through nearly anything. You deal double your jaws damage to an unattended, inanimate object.</p>
 ------ Description (fr) ------
-<p>Avec assez de temps et de détermination, vous pouvez mâchonner presque tout. Vous infligez le double des dégâts de votre mâchoires à un objet inanimé non tenu.</p>
+<p>Avec assez de temps et de détermination, vous pouvez mâchonner presque tout.</p>
+<p>Vous infligez le double des dégâts de vos mâchoires à un objet inanimé non tenu.</p>
