--- a/data/feats/ancestry-05-kGed3uQbZ7x5SBB8.htm
+++ b/data/feats/ancestry-05-kGed3uQbZ7x5SBB8.htm
@@ -6,7 +6,7 @@ PrereqFR: Homme-lézard écaille de falaise
 
 ------ Benefits and spoiler ----
 Benefits: You stick to walls with a preternatural grip.
-Avantage: Vous vous collez aux murs avec une poigne surnaturelle.
+Avantage: Vous obtenez une Vitesse d'escalade de 4,5m.
 
 ------ Description (en) ------
 <p>You stick to walls with a preternatural grip. You gain a climb Speed of 15 feet.</p>
