--- a/data/feats/ancestry-05-LC2EnXQ4MkhDLViM.htm
+++ b/data/feats/ancestry-05-LC2EnXQ4MkhDLViM.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The ridges and flaps of your skin steer you through the water.
-Avantage: Les crêtes et les rabats de votre peau vous guident dans l'eau.
+Avantage: Vous obtenez une vitesse de Nage de 4,5 m.
 
 ------ Description (en) ------
 <p>The ridges and flaps of your skin steer you through the water. You gain a swim Speed of 15 feet.</p>
 ------ Description (fr) ------
-<p>Des nageoires et des rabats de votre peau vous dirigent dans l'eau. Vous obtenez une vitesse de Nage de 4,5 m.</p>
+<p>Des nageoires et des rabats de votre peau vous font avancer dans l'eau. Vous obtenez une vitesse de Nage de 4,5 m.</p>
