--- a/data/feats/ancestry-05-l2JaSC3NA9S6Qq46.htm
+++ b/data/feats/ancestry-05-l2JaSC3NA9S6Qq46.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: With a bit of self-discovery, you find a new form.
-Avantage: Avec un peu de découverte de soi, on trouve une nouvelle forme.
+Avantage: Votre Changement de forme vous permet d'adopter une autre forme de kitsune.
 
 ------ Description (en) ------
 <p>With a bit of self-discovery, you find a new form. You gain the alternate form of a kitsune heritage other than your own, adding it to the options for your Change Shape.</p>
 ------ Description (fr) ------
-<p>Avec un peu de découverte de vous même, vous trouvez une nouvelle forme. Vous obtenez la forme alternative d'un héritage kitsune autre que le vôtre, l'ajoutant aux options de votre Changement de forme.</p>
+<p>Avec un peu de découverte de vous même, vous trouvez une nouvelle forme.</p>
+<p>Vous obtenez la forme alternative d'un héritage kitsune différent du vôtre, l'ajoutant aux options de votre Changement de forme.</p>
