--- a/data/feats/ancestry-05-NBDwiz1NDioc2eMP.htm
+++ b/data/feats/ancestry-05-NBDwiz1NDioc2eMP.htm
@@ -6,7 +6,7 @@ PrereqFR: réserve de focalisation|au moins un sort inné obtenu par un héritag
 
 ------ Benefits and spoiler ----
 Benefits: The magic within you provides increased energy you can use to focus.
-Avantage: La magie en vous fournit une énergie accrue que vous pouvez utiliser pour vous concentrer.
+Avantage: Une fois par jour, vous regagnez 1 point de focalisation.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
