--- a/data/feats/ancestry-05-NBwH9wEeUfKfOg8R.htm
+++ b/data/feats/ancestry-05-NBwH9wEeUfKfOg8R.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You move quickly, snatching a shiny item that catches your eye.
-Avantage: Vous vous déplacez rapidement, attrapant un objet brillant qui attire votre attention.
+Avantage: Vous pouvez vous déplacer tout en fauchant un objet
 
 ------ Description (en) ------
 <p>You move quickly, snatching a shiny item that catches your eye. Stride twice, and you can Interact to grab an unattended object at any point during your movement.</p>
 ------ Description (fr) ------
-<p>Vous vous déplacez rapidement, arrachant un objet brillant qui a attirré votre attention. Marchez rapidement deux fois et vous pouvez Interagir pour saisir un objet non tenu à n'importe quel moment durant votre déplacement.</p>
+<p>Vous vous déplacez rapidement puis fauchez un objet brillant qui a attiré votre attention. Marchez rapidement deux fois. Vous pouvez Interagir pour saisir un objet non tenu à n'importe quel moment au cours de votre déplacement.</p>
