--- a/data/feats/ancestry-05-NFsQOa3ynthYLVj6.htm
+++ b/data/feats/ancestry-05-NFsQOa3ynthYLVj6.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your soul is warded against the power of undeath and plague, as well as that of the evil former psychopomps known as sahkils.
-Avantage: Votre âme est protégée contre le pouvoir de la mort et de la peste, ainsi que contre celui des anciens psychopompes maléfiques connus sous le nom de sahkils.
+Avantage: Vous obtenez un bonus de circonstances aux jets de protection contre les effets de mort, la maladie et ceux des morts-vivants ou des sahkils.
 
 ------ Description (en) ------
 <p>Your soul is warded against the power of undeath and plague, as well as that of the evil former psychopomps known as sahkils. You gain a +1 circumstance bonus to saving throws against death effects, disease, and all effects from undead or sahkils. This bonus increases to +2 against an undead or sahkil's death effect or disease.</p>
