--- a/data/feats/ancestry-05-O89mwKPRg0up0J0I.htm
+++ b/data/feats/ancestry-05-O89mwKPRg0up0J0I.htm
@@ -6,9 +6,9 @@ PrereqFR: Sieste féline|Réserve de focalisation
 
 ------ Benefits and spoiler ----
 Benefits: When you Cat Nap, you can also Refocus as you dream of a relevant activity.
-Avantage: Lorsque vous faites la sieste, vous pouvez également vous recentrer en rêvant d'une activité pertinente.
+Avantage: Sieste féline vous permet aussi de Refocaliser.
 
 ------ Description (en) ------
 <p>When you Cat Nap, you can also Refocus as you dream of a relevant activity.</p>
 ------ Description (fr) ------
-<p>Lorsque vous faites une Sieste féline, vous pouvez aussi Refocaliser en rêvant d'une activité qui le permet.</p>
+<p>Lorsque vous faites une Sieste féline, vous pouvez aussi Refocaliser en rêvant d'une activité qui vous le permet.</p>
