--- a/data/feats/ancestry-05-OK8Fm7EG8wjoYZBX.htm
+++ b/data/feats/ancestry-05-OK8Fm7EG8wjoYZBX.htm
@@ -6,9 +6,9 @@ PrereqFR: Vierge virga
 
 ------ Benefits and spoiler ----
 Benefits: You wrap a shell of favorable wind around a weapon you wield.
-Avantage: Vous enroulez une enveloppe de vent favorable autour de l'arme que vous maniez.
+Avantage: Vos attaques à distance ne subissent pas de pénalités de circonstances liées au vent et leur portée profite du vent favorable.
 
 ------ Description (en) ------
 <p>You wrap a shell of favorable wind around a weapon you wield. On your next Strike with a ranged weapon before the start of your next turn, you don’t take circumstance penalties on the attack roll due to wind. In addition, if that weapon has a range increment of 10 feet or less, increase its range increment by 10 feet for that Strike.</p>
 ------ Description (fr) ------
-<p>Vous enroulez une coquille de vent favorable autour d'une arme que vous maniez. Sur votre prochaine frappe avec une arme à distance avant le début de votre prochain tour, Vous ne subisssez pas les pénalités de circonstance sur le jet d'attaque lié au vent. De plus, si cette arme a un facteur de portée de 3 m ou moins, augmentez sa portée de 3 m pour cette Frappe.</p>
+<p>Vous enroulez une enveloppe de vent favorable autour d'une arme que vous maniez. Sur votre prochaine frappe avec une arme à distance avant le début de votre prochain tour, vous ne subissez pas les pénalités de circonstances sur le jet d'attaque lié au vent. De plus, si cette arme a un facteur de portée de 3 m ou moins, augmentez sa portée de 3 m pour cette Frappe.</p>
