--- a/data/feats/ancestry-05-mfy0nasMIiMLUm3f.htm
+++ b/data/feats/ancestry-05-mfy0nasMIiMLUm3f.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Athlétisme
 
 ------ Benefits and spoiler ----
 Benefits: You create gusts of wind when you jump, allowing you to carry yourself across greater distances.
-Avantage: Vous créez des rafales de vent lorsque vous sautez, ce qui vous permet de vous transporter sur de plus grandes distances.
+Avantage: Vous obtenez les dons de compétence Saut rapide et Bond puissant.
 
 ------ Description (en) ------
 <p>You create gusts of wind when you jump, allowing you to carry yourself across greater distances. You gain the @Compendium[pf2e.feats-srd.ZBhvJ9O8MvBFAlhq]{Quick Jump} and @Compendium[pf2e.feats-srd.HJYQlmGTdtyGWr6a]{Powerful Leap} skill feats as bonus feats.</p>
