--- a/data/feats/ancestry-05-MwjnRpVn3br88Caj.htm
+++ b/data/feats/ancestry-05-MwjnRpVn3br88Caj.htm
@@ -6,7 +6,7 @@ PrereqFR: Perception des illusions
 
 ------ Benefits and spoiler ----
 Benefits: Illusion magic comes to you so naturally that you can effortlessly sustain your magical ruses.
-Avantage: La magie de l'illusion vous vient si naturellement que vous pouvez soutenir sans effort vos ruses magiques.
+Avantage: Vous Maintenez un sort pour étendre la durée d'un de vos sorts d'illusion actifs sans y penser.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> Your turn begins.</p>
