--- a/data/feats/ancestry-05-OhyN9pBHdMpC126F.htm
+++ b/data/feats/ancestry-05-OhyN9pBHdMpC126F.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: When you Change Shape, you retain elements of your kitsune form, allowing you to speak in a fox form, use kitsune unarmed attacks in a tailless form, or gain a tail in your tailless form to use abilities that require one.
-Avantage: Lorsque vous changez de forme, vous conservez des éléments de votre forme kitsune, ce qui vous permet de parler sous une forme de renard, d'utiliser des attaques kitsune sans arme sous une forme sans queue, ou de gagner une queue sous votre forme sans queue pour utiliser des capacités qui en nécessitent une.
+Avantage: Vous pouvez utiliser vos capacités kitsunes dans toutes vos formes à condition de divulguer votre nature.
 
 ------ Description (en) ------
 <p>When you Change Shape, you retain elements of your kitsune form, allowing you to speak in a fox form, use kitsune unarmed attacks in a tailless form, or gain a tail in your tailless form to use abilities that require one. You can Change Shape to alter the details of your hybrid form without fully changing into your true form or your alternate form. While in hybrid form, your foxlike features make it obvious that you aren’t a normal humanoid.</p>
 ------ Description (fr) ------
-<p>Lorsque vous Changez de forme, vous conservez certains éléments de votre forme kitsune, vous permettant de parler sous la forme d'un renard, d'utiliser les attaques à mains nues kitsune dans une forme sans queue ou de gagner une quauer sous votre forme sans queue pour utiliser des capacités qui en imposent une.</p>
-<p>Vous pouvez changer de forme pour altérer les détails de votre forme hybride sans vous transformer en votre forme réelle ou en une forme alternative. Tant que vous êtes sous forme hybride, vos traits vulpins rendent évidents que vous n'êtes pas un humanoide normal.</p>
+<p>Lorsque vous Changez de forme, vous conservez certains éléments de votre forme kitsune, vous permettant de parler sous la forme d'un renard, d'utiliser les attaques à mains nues kitsune dans une forme sans queue ou de gagner une queue sous votre forme sans queue pour pouvoir utiliser des capacités qui en imposent une.</p>
+<p>Vous pouvez changer de forme pour altérer les détails de votre forme hybride sans vous transformer en votre forme réelle ou en une forme alternative. Tant que vous êtes sous forme hybride, vos traits vulpins rendent évidents que vous n'êtes pas un humanoïde normal.</p>
