--- a/data/feats/ancestry-05-oEvcWFvBnsZ03OGW.htm
+++ b/data/feats/ancestry-05-oEvcWFvBnsZ03OGW.htm
@@ -7,7 +7,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned how to throw your voice through the winds, tricking others as to your location.
-Avantage: Tu as appris à lancer ta voix à travers les vents, trompant les autres sur ta position.
+Avantage: Vous pouvez lancer Ventriloquie une fois par jour.
 
 ------ Description (en) ------
 <p>You’ve learned how to throw your voice through the winds, tricking others as to your location. You can cast @Compendium[pf2e.spells-srd.yV7Ouzaoe7DHLESI]{Ventriloquism} as a primal innate spell once per day. If you’re a songbird strix, you can cast it twice per day instead.</p>
