--- a/data/feats/ancestry-05-oL6f86dy4yyx5N54.htm
+++ b/data/feats/ancestry-05-oL6f86dy4yyx5N54.htm
@@ -6,10 +6,10 @@ PrereqFR: héritage nain gardemort
 
 ------ Benefits and spoiler ----
 Benefits: When you critically hit an undead creature, or an undead creature critically fails a saving throw against one of your abilities, you drive your divine wrath home in your enemy’s heart.
-Avantage: Lorsque vous touchez une créature morte-vivante de manière critique, ou qu'une créature morte-vivante échoue de manière critique à un jet de sauvegarde contre une de vos capacités, vous enfoncez votre colère divine dans le cœur de votre ennemi.
+Avantage: Vous Affaiblissez les créatures mortes vivantes en cas de critique. 
 
 ------ Description (en) ------
 <p>When you critically hit an undead creature, or an undead creature critically fails a saving throw against one of your abilities, you drive your divine wrath home in your enemy's heart. The undead is @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 1 for 1 round.</p>
 ------ Description (fr) ------
-<p>Lorsque vous obtenez un coup critique sur une créature morte-vivante ou si une créature morte-vivante manque un jet de sauvegarde contre l'une de vos capacités, vous concentrez votre courroux divin dans le cœur de votre ennemi.</p>
+<p>Lorsque vous obtenez un coup critique sur une créature morte-vivante ou si une créature morte-vivante obtient un échec critique à un jet de sauvegarde contre l'une de vos capacités, vous concentrez votre courroux divin dans le cœur de votre ennemi.</p>
 <p>Le mort-vivant est @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 pendant 1 round.</p>
