--- a/data/pathfinder-bestiary-2/SsR4wiSWA7xhlkH9.htm
+++ b/data/pathfinder-bestiary-2/SsR4wiSWA7xhlkH9.htm
@@ -1,8 +1,8 @@
 Name: Iguanodon
-Nom: 
-État: auto-trad
+Nom: Iguanodon
+État: libre
 
 ------ Description (en) ------
 Iguanodons are large, herbivorous dinosaurs that inhabit swamps and forests where they browse on the abundant vegetation. The iguanodon is capable of moving on two feet or on four, quickly switching from one stance to the other depending on whether it needs to move through dense foliage or to reach delectable morsels hanging up in the canopy.<br /><br />Although iguanodons are herbivores, they are notoriously quick to anger. Their thumb spikes make their claws particularly devastating weapons. A well-placed blow from one of these claws can turn a hungry predator into a cowering beast with one swift strike. Iguanodons are 30 feet long and weigh 6,000 pounds.<br /><br />
 ------ Description (fr) ------
-Les iguanodons sont de grands dinosaures herbivores qui vivent dans les marécages et les forêts où ils broutent l'abondante végétation. L'iguanodon est capable de se déplacer sur deux ou quatre pattes, passant rapidement d'une position à l'autre selon qu'il doit se déplacer dans un feuillage dense ou atteindre de délicieuses bouchées suspendues dans la canopée.<br /><br />Bien que les iguanodons soient des herbivores, ils sont connus pour leur rapidité à s'énerver. Les pointes de leurs pouces font de leurs griffes des armes particulièrement dévastatrices. Un coup bien placé de l'une de ces griffes peut transformer un prédateur affamé en une bête recroquevillée en un seul coup rapide. Les iguanodons mesurent 30 pieds de long et pèsent 6 000 livres ;
+Les Iguanodons sont de grands dinosaures herbivores qui vivent dans les marécages et les forêts où ils broutent l'abondante végétation. L'Iguanodon est capable de se déplacer sur deux ou quatre pattes, passant rapidement d'une position à l'autre selon qu'il doit se déplacer dans un feuillage dense ou atteindre de délicieuses bouchées suspendues dans la canopée.<br /><br />Bien que les Iguanodons soient des herbivores, ils sont connus pour leur rapidité à s'énerver. Les pointes de leurs pouces font de leurs griffes des armes particulièrement dévastatrices. Un coup bien placé de l'une de ces griffes peut transformer un prédateur affamé en une bête recroquevillée en un seul coup rapide. Les iguanodons mesurent 9 mètres de long et pèsent 4 tonnes.
