--- a/data/pathfinder-bestiary-2/sY3VkazdyPiMgMj1.htm
+++ b/data/pathfinder-bestiary-2/sY3VkazdyPiMgMj1.htm
@@ -1,8 +1,8 @@
 Name: Fjord Linnorm
-Nom: 
-État: auto-trad
+Nom: Linnorm des Fjord
+État: libre
 
 ------ Description (en) ------
 Fjord linnorms make their homes in damp caves behind ice-cold waterfalls in the river-veined coastal reaches of the north. While they may appear graceful as they swim up the fjords for which they're named, they are as vile as any other of their species and take pleasures in capsizing river boats before gobbling up their terrified crews.<br /><br />
 ------ Description (fr) ------
-Les linnorms des fjords ont élu domicile dans des grottes humides derrière des chutes d'eau glacées, dans les régions côtières du nord bordées de rivières. Bien qu'ils puissent sembler gracieux lorsqu'ils remontent les fjords qui leur ont donné leur nom, ils sont aussi vils que n'importe quelle autre espèce et prennent plaisir à faire chavirer les bateaux de rivière avant de dévorer leurs équipages terrifiés.<br /><br />
+Les Linnorms des fjords ont élu domicile dans des grottes humides derrière des chutes d'eau glacées, dans les régions côtières du nord bordées de rivières. Bien qu'ils puissent sembler gracieux lorsqu'ils remontent les fjords qui leur ont donné leur nom, ils sont aussi vils que n'importe quelle autre espèce de Linnorm, et prennent plaisir à faire chavirer les bateaux de rivière avant de dévorer leurs équipages terrifiés.<br /><br />
