--- a/data/feats/ancestry-05-OXhrwQgnZdOi81Yi.htm
+++ b/data/feats/ancestry-05-OXhrwQgnZdOi81Yi.htm
@@ -6,7 +6,7 @@ PrereqFR: Férocité orque
 
 ------ Benefits and spoiler ----
 Benefits: You're exceptionally difficult to kill.
-Avantage: Tu es exceptionnellement difficile à tuer.
+Avantage: Vos tests de récupération sont meilleurs que la normale.
 
 ------ Description (en) ------
 <p>You’re exceptionally difficult to kill. The DC of your recovery checks is equal to 9 + your dying value, or 8 + your dying value if you have the @Compendium[pf2e.feats-srd.AmP0qu7c5dlBSath]{Toughness} general feat.</p>
