--- a/data/feats/ancestry-05-OqJMjuK61uST7AlM.htm
+++ b/data/feats/ancestry-05-OqJMjuK61uST7AlM.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes gnomes
 
 ------ Benefits and spoiler ----
 Benefits: You produce outstanding results when wielding unusual weapons.
-Avantage: Vous appliquez les effets de critique spécialisé des armes gnomes.
+Avantage: En cas de coup critique, vous appliquez les effets de critique spécialisé des armes gnomes.
 
 ------ Description (en) ------
 <p>You produce outstanding results when wielding unusual weapons. Whenever you critically hit using a glaive, kukri, or gnome weapon, you apply the weapon's critical specialization effect.</p>
