--- a/data/feats/ancestry-05-PncXj46fgSwTWRl6.htm
+++ b/data/feats/ancestry-05-PncXj46fgSwTWRl6.htm
@@ -6,7 +6,7 @@ PrereqFR: héritages Aiguiseur de crocs ou Gobelin dentd'rasoir
 
 ------ Benefits and spoiler ----
 Benefits: Whenever someone grabs onto you, you instinctively bite down hard.
-Avantage: Quand quelqu'un s'accroche à vous, vous mordez instinctivement fort.
+Avantage: Vous mordez en réaction tout adversaire qui ose vous Saisir ou vous Entraver.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A foe gives you the @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed} or @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Restrained} condition using a part of its body.</p>
