--- a/data/feats/ancestry-05-oSA1Ii6gTRGobeSO.htm
+++ b/data/feats/ancestry-05-oSA1Ii6gTRGobeSO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You wrap yourself in shadow to change your appearance.
-Avantage: Vous vous enveloppez dans l'ombre pour changer votre apparence.
+Avantage: Vous pouvez lancer Déguisement illusoire une fois par jour.
 
 ------ Description (en) ------
 <p>You wrap yourself in shadow to change your appearance. You can cast @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Illusory Disguise} as a 1st-level occult innate spell once per day. This spell gains the shadow trait.</p>
