--- a/data/feats/ancestry-05-oqoftwLB6tvoLjnL.htm
+++ b/data/feats/ancestry-05-oqoftwLB6tvoLjnL.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your body is almost as flexible as your shadow.
-Avantage: Votre corps est presque aussi flexible que votre ombre.
+Avantage: Votre corps est presque aussi souple que votre ombre.
 
 ------ Description (en) ------
 <p>Your body is almost as flexible as your shadow. When you critically fail at Squeezing, you get a failure instead. Additionally, when you roll a success at an Escape check, you get a critical success instead; if you roll a critical success, you can Step instead of Striding up to 5 feet.</p>
 ------ Description (fr) ------
 <p>Votre corps est presque aussi souple que votre ombre.</p>
-<p>Vorsque vous obtenez un échec critique à vous Faufiler, vous obtenez un échec à la place.</p>
-<p>De plus, lorsque vous obtenez un succès à un test pour vous Échapper, vous considérez qu'il s'agit d'un succès à la place ; si vous obtenez un succès critique, vous pouvez Faire un pas au lieu de Marcher rapidement de 1,5 m.</p>
+<p>Lorsque vous obtenez un échec critique à vous Faufiler, vous obtenez un échec à la place.</p>
+<p>De plus, lorsque vous obtenez un succès à un test pour vous Échapper, vous considérez qu'il s'agit d'un succès à la place ; si vous obtenez un succès critique, vous pouvez Faire un pas de 1,5 m au lieu de Marcher rapidement.</p>
