--- a/data/feats/ancestry-05-pqezW5dqha1I32Ld.htm
+++ b/data/feats/ancestry-05-pqezW5dqha1I32Ld.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your own actions inspire your allies to great achievements.
-Avantage: Vos propres actions inspirent vos alliés pour de grandes réalisations.
+Avantage: Vous pouvez automatiquement utiliser la réaction Aider pour apporter votre aide à un allié qui utilise la même compétence sans préparation.
 
 ------ Description (en) ------
 <p>Your own actions inspire your allies to great achievements. Whenever you critically succeed at a skill check, you automatically qualify to use the Aid reaction when attempting to help an ally using the same skill, even without spending an action to prepare to do so.</p>
