--- a/data/feats/ancestry-05-qJw7zEMn0k5kp9ti.htm
+++ b/data/feats/ancestry-05-qJw7zEMn0k5kp9ti.htm
@@ -6,9 +6,10 @@ PrereqFR: qualifié avec les armes de guerre
 
 ------ Benefits and spoiler ----
 Benefits: You know how to fight in formation with your brethren.
-Avantage: Vous savez comment combattre en formation avec vos frères.
+Avantage: Combattre en formation avec d'autres hobgobelins vous accorde une protection.
 
 ------ Description (en) ------
 <p>You know how to fight in formation with your brethren. When you are adjacent to at least two hobgoblin allies, you gain a +1 circumstance bonus to AC and saving throws. This bonus increases to +2 on Reflex saves against area effects.</p>
 ------ Description (fr) ------
-<p>Vous avez appris à vous battre en formation avec vos frères. Lorsque vous êtes adjacent à au moins deux alliés hobgobelins, vous gagnez un bonus de circonstances de +1 à votre CA et à vos jets de sauvegarde. Ce bonus passe à +2 sur vos jets de Réflexes contre les effets de zone.</p>
+<p>Vous avez appris à vous battre en formation avec vos frères.</p>
+<p>Lorsque vous êtes adjacent à au moins deux alliés hobgobelins, vous gagnez un bonus de circonstances de +1 à votre CA et à vos jets de sauvegarde. Ce bonus passe à +2 sur vos jets de Réflexes contre les effets de zone.</p>
