--- a/data/feats/ancestry-05-qUZnrueC2a0zf95N.htm
+++ b/data/feats/ancestry-05-qUZnrueC2a0zf95N.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Unlike most of your kind, who dismiss goblins as embarrassments or expendable annoyances, you have studied the methodology behind their irresponsible and incomprehensible actions.
-Avantage: Contrairement à la plupart des gens de votre espèce, qui considèrent les gobelins comme une gêne ou un ennui inutile, vous avez étudié la méthodologie derrière leurs actions irresponsables et incompréhensibles.
+Avantage: Vous obtenez le don général Ascendance adoptive (gobelin) et un don ancestral gobelin de niveau 1.
 
 ------ Description (en) ------
 <p>Unlike most of your kind, who dismiss goblins as embarrassments or expendable annoyances, you have studied the methodology behind their irresponsible and incomprehensible actions. You gain the @Compendium[pf2e.feats-srd.ihN8gkHSdPG9Trte]{Adopted Ancestry} general feat and must select goblin as the feat’s chosen ancestry. You also gain one 1st-level goblin ancestry feat.</p>
 ------ Description (fr) ------
-<p>Contrairement à la plupart des vôtres, qui considèrent les gobelins comme de l'embarras ou des inconvénients facilement remplaçables, vous avez étudié la méthodologie derrière leurs actions irresponsables et incompréhensibles. Vous obtenez le don général @Compendium[pf2e.feats-srd.ihN8gkHSdPG9Trte]{Ascendance adoptive} et devez choisir gobelin comme l'ascendance du don choisi. Vous obtenez aussi un don d'ascendance gobeline de niveau 1.</p>
+<p>Contrairement à la plupart des vôtres, qui considèrent les gobelins comme de l'embarras ou des inconvénients facilement remplaçables, vous avez étudié la méthodologie derrière leurs actions irresponsables et incompréhensibles. Vous obtenez le don général @Compendium[pf2e.feats-srd.ihN8gkHSdPG9Trte]{Ascendance adoptive} et devez choisir l'ascendance gobelin. Vous obtenez aussi un don ancestral gobelin de niveau 1.</p>
