--- a/data/feats/ancestry-05-qXl2cOh3wL3QszCy.htm
+++ b/data/feats/ancestry-05-qXl2cOh3wL3QszCy.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've crossed blades with a wide variety of foes wielding a wide variety of weapons, and you've learned the basics of fighting with nearly any of them.
-Avantage: Vous avez croisé le fer avec une grande variété d'ennemis brandissant une grande variété d'armes, et vous avez appris les bases du combat avec presque toutes ces armes.
+Avantage: Vous connaissez toutes les armes.
 
 ------ Description (en) ------
 <p>You've crossed blades with a wide variety of foes wielding a wide variety of weapons, and you've learned the basics of fighting with nearly any of them.</p>
 <p>When wielding a weapon you aren't proficient with, treat your level as your proficiency bonus. At 11th level, you become trained in all weapons.</p>
 ------ Description (fr) ------
-<p>Vous avez croisé le fer avec une large variété d'ennemis maniant une large variété d'armes et vous avez appris les bases du combat avec presque toutes.</p>
+<p>Vous avez croisé le fer avec une large variété d'ennemis brandissant une grande variété d'armes et vous avez appris les bases du combat avec presque toutes.</p>
 <p>Lorsque vous maniez une arme dont vous n'avez pas la maîtrise, considérez que votre niveau est votre bonus de maîtrise. Au niveau 11, vous devenez qualifié avec toutes les armes.</p>
