--- a/data/feats/ancestry-05-qZUdGd2khS9cq4hJ.htm
+++ b/data/feats/ancestry-05-qZUdGd2khS9cq4hJ.htm
@@ -2,12 +2,11 @@ Name: Shifting Faces
 Nom: Visages changeants
 PrereqEN: tailless alternate form
 PrereqFR: forme alternative sans queue
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You wear many faces, even those that don't belong to you.
-Avantage: Tu portes de nombreux visages, même ceux qui ne t'appartiennent pas.
+Avantage: Vous obtenez les effets d'un Déguisement illusoire lorsque vous changez de forme une fois par jour.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -16,4 +15,4 @@ Avantage: Tu portes de nombreux visages, même ceux qui ne t'appartiennent pas.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous maniez de nombreux visages, même ceux qui ne vous appartiennent pas. Lorsque vous @Compendium[pf2e.ancestryfeatures.Ymg6WqeJqOyLJLEr]{Changez de forme} pour passer à votre forme sans queue, vous obtenez les effets d'un @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire} de niveau 3 pendant 1 heure ou jusqu'à ce que vous vous changiez de nouveau, à moins que ce ne soit un effet de transmutation au lieu d'une illusion.</p>
+<p>Vous maniez de nombreux visages, même ceux qui ne vous appartiennent pas. Lorsque vous @Compendium[pf2e.ancestryfeatures.Ymg6WqeJqOyLJLEr]{Changez de forme} pour passer à votre forme sans queue, vous obtenez les effets d'un @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire} au niveau 3 pendant 1 heure ou jusqu'à ce que vous vous changiez de nouveau, sauf qu'il s'agit d'un effet de transmutation et non une illusion.</p>
