--- a/data/feats/ancestry-05-rFmJVDdB313EibTs.htm
+++ b/data/feats/ancestry-05-rFmJVDdB313EibTs.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: As someone tries to twist fate, you consume the interference.
-Avantage: Alors que quelqu'un essaie de tordre le destin, vous consommez l'interférence.
+Avantage: Vous annulez un effet de chance ou de malchance à proximité une fois par jour.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -19,4 +19,4 @@ Avantage: Alors que quelqu'un essaie de tordre le destin, vous consommez l'inter
 <p><strong>Déclencheur</strong> Une créature dans les 18 m utilise un effet de chance ou de malchance.</p>
 <hr />
 <p>Lorsque quelqu'un essaie de modifier le destin, vous ruinez son interférence. L'effet déclencheur est interrompu.</p>
-<p>Si c'est un effet de malchance, Avaler la chance obtient le trait chance ; si c'est un effet de chance, Avaler la chance obtient le trait malchance. Cet effet de chance ou de malchance s'applique au même jet que l'aurait fait l'effet déclencheur, de sorte que vous ne pourriez annuler un effet de chance avec Avaler la chance et alors applique un effet de malchance au même jet.</p>
+<p>Si c'est un effet de malchance, Avaler la chance obtient le trait chance ; si c'est un effet de chance, Avaler la chance obtient le trait malchance. Cet effet de chance ou de malchance s'applique au même jet que le ferait l'effet déclencheur, de sorte que vous ne pourriez annuler un effet de chance avec Avaler la chance puis appliquer un effet de malchance au même jet.</p>
