--- a/data/feats/ancestry-05-rnEfO5eyRw7Fywzb.htm
+++ b/data/feats/ancestry-05-rnEfO5eyRw7Fywzb.htm
@@ -6,9 +6,9 @@ PrereqFR: héritage Gobelin à queue|Queue dure
 
 ------ Benefits and spoiler ----
 Benefits: You excel at using your tail as a weapon to upend your foes.
-Avantage: Vous excellez à utiliser votre queue comme une arme pour renverser vos ennemis.
+Avantage: Vous faites un Croc-en-jambe à un maximum de deux créatures adjacentes .
 
 ------ Description (en) ------
 <p>You excel at using your tail as a weapon to upend your foes. Attempt a single Athletics check to Trip up to two adjacent creatures. If you roll a success against a target, you get a critical success against that target instead.</p>
 ------ Description (fr) ------
-<p>Vous excellez dans l'utilisation de votre queue comme d'une arme pour renverser vos adversaires. Faites un unique test d'Athlétisme pour faire un @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Croc-en-jambe} à jusqu'à deux créatures adjacentes. Si vous obtenez un succès contre une cible, vous obtenez un succès critique contre cette cible à la place.</p>
+<p>Vous excellez dans l'utilisation de votre queue comme d'une arme pour renverser vos adversaires. Faites un unique test d'Athlétisme pour faire un @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Croc-en-jambe} à un maximum de deux créatures adjacentes. Si vous obtenez un succès contre une cible, vous obtenez un succès critique contre cette cible à la place.</p>
