--- a/data/feats/ancestry-05-rp3mjgFXBVZYCleU.htm
+++ b/data/feats/ancestry-05-rp3mjgFXBVZYCleU.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites reject diseases with ease.
-Avantage: Vos nanites rejettent les maladies avec facilité.
+Avantage: Vos nanites vous aident à réduire le stade des maladies qui vous affectent.
 
 ------ Description (en) ------
 <p>Your nanites reject diseases with ease. Each time you succeed at a Fortitude save against an ongoing disease, you reduce its stage by 2, or by 1 against a virulent disease. Each critical success you achieve against an ongoing disease reduces its stage by 3, or by 2 against a virulent disease.</p>
 ------ Description (fr) ------
-<p>Vos nanites rejettent les maladies avec aise. Chaque fois que vous obtenez un succès à un jet de Vigueur contre une maladie qui vous affecte, vous réduisez son stade par 2 ou par 1 contre une maladie virulente. Chaque succès critique que vous atteignez contre une maladie qui vous affecte réduit son stade par 3 ou par 2 contre une maladie virulente.</p>
+<p>Vos nanites rejettent les maladies avec facilité.</p>
+<p>Chaque fois que vous obtenez un succès à un jet de Vigueur contre une maladie qui vous affecte, vous réduisez son stade de 2 ou de 1 si c'est une maladie virulente. Chaque succès critique que vous obtenez contre une maladie qui vous affecte réduit son stade de 3 ou de 2 si c'est une maladie virulente.</p>
