--- a/data/feats/ancestry-05-Rr7GdUjXhGhV04Pe.htm
+++ b/data/feats/ancestry-05-Rr7GdUjXhGhV04Pe.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The elven magic in your blood manifests as a force you can use to become more appealing or alluring.
-Avantage: La magie elfique dans votre sang se manifeste comme une force que vous pouvez utiliser pour devenir plus attirant ou séduisant.
+Avantage: Vous pouvez lancer le sort Charme une fois par jour.
 
 ------ Description (en) ------
 <p>The elven magic in your blood manifests as a force you can use to become more appealing or alluring. You can cast 1st-level charm as an arcane innate spell once per day.</p>
 ------ Description (fr) ------
-<p>La magie elfique qui coule dans vos veines se manifeste comme une force que vous pouvez utiliser pour devenir plus séduisant ou intéressant. Vous pouvez lancer le sort de niveau 1 charme comme un sort inné arcanique une fois par jour.</p>
+<p>La magie elfique qui coule dans vos veines se manifeste comme une force que vous pouvez utiliser pour devenir plus séduisant ou intéressant. Vous pouvez lancer le sort Charme au niveau 1 comme un sort inné arcanique une fois par jour.</p>
