--- a/data/feats/ancestry-05-t3IzY8uSyFj3aGmh.htm
+++ b/data/feats/ancestry-05-t3IzY8uSyFj3aGmh.htm
@@ -6,7 +6,7 @@ PrereqFR: Queue fouet
 
 ------ Benefits and spoiler ----
 Benefits: You can shed your tail to escape.
-Avantage: Tu peux perdre ta queue pour t'échapper.
+Avantage: Vous pouvez perdre votre queue pour vous Échapper si vous êtes agrippé.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have a fully grown tail.<br /><strong>Trigger</strong> You become grabbed.<br /></p>
@@ -16,4 +16,5 @@ Avantage: Tu peux perdre ta queue pour t'échapper.
 <p><strong>Conditions</strong> Vous avez une queue complètement repoussée.</p>
 <p><strong>Déclencheur</strong> Vous devenez @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Empoigné}.</p>
 <hr />
-<p>Vous pouvez abandonner votre queue pour pouvoir vous échapper. Vous cessez d'être empoigné, puis @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} sans déclencher la moindre réaction de la part de la créature qui vous a empoigné. Il faut 1 semaine pour que votre queue repousse complètement. Jusqu'à ce que ce soit le cas, vous ne pouvez plus faire d'attaques à mains nues avec votre queue et vous subissez une pénalité de circonstance de –2 sur les tests pour @Compendium[pf2e.actionspf2e.M76ycLAqHoAgbcej]{Garder l'équilibre}.</p>
+<p>Vous pouvez abandonner votre queue pour pouvoir vous échapper.</p>
+<p>Vous cessez d'être empoigné, puis @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} sans déclencher la moindre réaction de la part de la créature qui vous a empoigné. Il faut 1 semaine pour que votre queue repousse complètement. Jusqu'à ce que ce soit le cas, vous ne pouvez plus faire d'attaques à mains nues avec votre queue et vous subissez une pénalité de circonstances de –2 sur les tests pour @Compendium[pf2e.actionspf2e.M76ycLAqHoAgbcej]{Garder l'équilibre}.</p>
