--- a/data/feats/ancestry-05-RP7TlsqNuge0dltp.htm
+++ b/data/feats/ancestry-05-RP7TlsqNuge0dltp.htm
@@ -6,9 +6,10 @@ PrereqFR: au moins un sort inné d'un héritage ou d'un don ancestral kitsune
 
 ------ Benefits and spoiler ----
 Benefits: You know more kitsune magic.
-Avantage: Tu connais plus de magie kitsune.
+Avantage: Chaque jour, Vous pouvez choisir de lancer Imprécation, Objet illusoire ou Sanctuaire.
 
 ------ Description (en) ------
 <p>You know more kitsune magic. During your daily preparations, choose @Compendium[pf2e.spells-srd.7ZinJNzxq0XF0oMx]{Bane}, @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Illusory Object}, or @Compendium[pf2e.spells-srd.8xRzLhwGL7Dgy3EZ]{Sanctuary}. You can cast this as a 1st-level divine innate spell once that day.</p>
 ------ Description (fr) ------
-<p>Vous connaissez davantage de magie kitsune. Au cours de vos préparatifs quotidiens, choisissez @Compendium[pf2e.spells-srd.7ZinJNzxq0XF0oMx]{Imprécation}, @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire} ou @Compendium[pf2e.spells-srd.8xRzLhwGL7Dgy3EZ]{Sanctuaire}. Vous pouvez lancer ce sort comme un sort inné divin de niveau 1 une fois par jour durant cette journée.</p>
+<p>Vous connaissez davantage de magie kitsune.</p>
+<p>Au cours de vos préparatifs quotidiens, choisissez @Compendium[pf2e.spells-srd.7ZinJNzxq0XF0oMx]{Imprécation}, @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire} ou @Compendium[pf2e.spells-srd.8xRzLhwGL7Dgy3EZ]{Sanctuaire}. Vous pouvez lancer ce sort comme un sort inné divin de niveau 1 une fois par jour durant cette journée.</p>
