--- a/data/feats/ancestry-05-RrtqD8WmoUumauJD.htm
+++ b/data/feats/ancestry-05-RrtqD8WmoUumauJD.htm
@@ -1,17 +1,17 @@
 Name: Mask Of Power
 Nom: Masque de pouvoir
 PrereqEN: Orc Warmask
-PrereqFR: Masque de guerre orque
+PrereqFR: Masque de guerre orc
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your warmask sharpens your connection to the source of your mask's power.
-Avantage: Votre masque de chaleur renforce votre connexion à la source du pouvoir de votre masque.
+Avantage: Chaque jour, Vous pouvez choisir de lancer Coup au but, Douleur fantôme ou Terreur.
 
 ------ Description (en) ------
 <p>Your <em>warmask</em> sharpens your connection to the source of your mask’s power. During your daily preparations, choose @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{Fear}, @Compendium[pf2e.spells-srd.R8bqnYiThB6MYTxD]{Phantom Pain}, or @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{True Strike}.</p>
 <p>Until your next daily preparations, you can cast this spell as a 1st-level innate spell once per day; the spell’s tradition is determined by the tradition tied to your <em>warmask</em>. You must be wearing your <em>warmask</em> to Cast the Spell.</p>
 ------ Description (fr) ------
 <p>Votre <em>masque de guerre</em> affûte votre relation avec la source de la puissance de votre masque.</p>
-<p>Au cours de vos préparatifs quotidiens, choisissez @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{Terreur}, @Compendium[pf2e.spells-srd.R8bqnYiThB6MYTxD]{Douleur fantôme} ou @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{Coup au but}.</p>
-<p>Jusqu'à vos prochains préparatifs quotidiens, vous pouvez lancer ce sort comme un sort inné de niveau 1 une fois par jour ; la tradition du sort est determinée par celle qui est liée à votre <em>masque de guerre</em>. Vous devez être en train de porter votre <em>masque de guerre</em> pour Lancer le sort.</p>
+<p>Au cours de vos préparatifs quotidiens, choisissez @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{Coup au but}, @Compendium[pf2e.spells-srd.R8bqnYiThB6MYTxD]{Douleur fantôme} ou @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{Terreur}.</p>
+<p>Jusqu'à vos prochains préparatifs quotidiens, vous pouvez lancer ce sort comme un sort inné de niveau 1 une fois par jour ; la tradition du sort est determinée par celle qui est liée à votre masque de guerre. Vous devez être en train de porter votre masque de guerre pour Lancer le sort.</p>
