--- a/data/feats/ancestry-05-SBhzem6n3buoxlG5.htm
+++ b/data/feats/ancestry-05-SBhzem6n3buoxlG5.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You wrap shadow around a single unattended light source within 120 feet that's no larger than a torch.
-Avantage: Vous enroulez l'ombre autour d'une seule source de lumière non surveillée dans un rayon de 120 pieds qui n'est pas plus grande qu'une torche.
+Avantage: Vous pouvez éteindre les lumières et tenter de contrer les lumières magiques.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once every 10 minutes</p>
@@ -16,4 +16,4 @@ Avantage: Vous enroulez l'ombre autour d'une seule source de lumière non survei
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
 <hr />
 <p>Vous enroulez d'ombre une unique source de lumière non tenue dans les 36 m qui n'est pas plus large qu'une torche.</p>
-<p>Toute source de lumière non magique que vous ciblez est automatiquement éteinte. Pour les sources magiques, faites un test de contre en utilisant votre votre modificateur de Vigueur ou de Vol contre le DD de la cible. Votre niveau de contre est égal à la moitié de votre niveau arrondi au supérieur. Réussir à contrer la source de lumière supprime sa capacité à produire de la lumière pendant 1 minute, mais pas tous ses autres effets. Si vous êtes dans une lumière faible ou dans l'obscurité lorsque vous Éteignez la lumière, sa portée est de 72 m.</p>
+<p>Toute source de lumière non magique que vous ciblez est automatiquement éteinte. Pour les sources magiques, faites un test de contre en utilisant votre votre modificateur de Vigueur ou de Vol contre le DD de la cible. Votre niveau de contre est égal à la moitié de votre niveau arrondi au supérieur. Réussir à contrer la source de lumière supprime sa capacité à produire de la lumière pendant 1 minute, mais pas ses autres effets. Si vous êtes dans une lumière faible ou dans l'obscurité lorsque vous Éteignez la lumière, la portée passe à 72 m.</p>
