--- a/data/feats/ancestry-05-ShH7Wl7xfJL07DZC.htm
+++ b/data/feats/ancestry-05-ShH7Wl7xfJL07DZC.htm
@@ -6,9 +6,10 @@ PrereqFR: héritage léchi feuillu ou don de compétence Chute féline
 
 ------ Benefits and spoiler ----
 Benefits: Using your own leaves, you can control your descent.
-Avantage: En utilisant vos propres feuilles, vous pouvez contrôler votre descente.
+Avantage: Vous pouvez planer lorsque vous chutez.
 
 ------ Description (en) ------
 <p>Using your own leaves, you can control your descent. You glide slowly toward the ground, 5 feet down and up to 25 feet forward through the air. As long as you spend at least 1 action gliding each round and have not yet reached the ground, you remain in the air at the end of your turn.</p>
 ------ Description (fr) ------
-<p>En utilisant vos propres feuilles, vous pouvez contrôler votre descente. Vous planez lentement vers le sol, 1,5 m vers le bas et 7,5 m devant vous à travers les airs. Tant que vous dépensez au moins 1 action pour planer chaque round et que vous n'avez pas touché le sol, vous restez dans les airs à la fin de votre tour.</p>
+<p>En utilisant vos propres feuilles, vous pouvez contrôler votre descente.</p>
+<p>Vous planez lentement vers le sol, 1,5 m vers le bas et 7,5 m devant vous à travers les airs. Tant que vous dépensez au moins 1 action pour planer chaque round et que vous n'avez pas touché le sol, vous restez dans les airs à la fin de votre tour.</p>
