--- a/data/feats/ancestry-05-s1swBWSqtfrXTJHK.htm
+++ b/data/feats/ancestry-05-s1swBWSqtfrXTJHK.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The stars grant you insights that guide your actions.
-Avantage: Les étoiles vous donnent des idées qui guident vos actions.
+Avantage: Une fois par jour, vous pouvez garder le meilleur de deux dés comme résultat d'un jet de sauvegarde ou d'un test de compétence 
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,6 +15,6 @@ Avantage: Les étoiles vous donnent des idées qui guident vos actions.
 <p>The stars grant you insights that guide your actions. You roll twice and take the better result. If it’s night and you can see the stars, you gain a +1 circumstance bonus to the triggering roll.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Déclencheur</strong> Vous êtes sur le point d'essayer un testde compétence ou un jet de sauvegarde.</p>
+<p><strong>Déclencheur</strong> Vous êtes sur le point d'essayer un test de compétence ou un jet de sauvegarde.</p>
 <hr />
-<p>Les étoiles vous accordent l'inuition qui guide guide vos actions. Vous lancez deux fois et prenez le meilleur résultat. Si c'est la nuit et que vous pouvez voir les étoiles, vous obtenez un bonus de circonstances de +1 au jet déclencheur.</p>
+<p>Les étoiles vous accordent l'intuition qui guide vos actions. Vous lancez deux fois les dés et choisissez le meilleur résultat. Si c'est la nuit et que vous pouvez voir les étoiles, vous obtenez un bonus de circonstances de +1 au jet déclencheur.</p>
