--- a/data/feats/ancestry-05-sGSf5BdopT0zWOWs.htm
+++ b/data/feats/ancestry-05-sGSf5BdopT0zWOWs.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The stone around you is your ally, and you have learned to use it to shore up your weaknesses.
-Avantage: La pierre qui vous entoure est votre alliée, et vous avez appris à l'utiliser pour combler vos faiblesses.
+Avantage: Il est difficile de vous prendre en tenaille lorsque vous êtes près d'un mur.
 
 ------ Description (en) ------
 <p>The stone around you is your ally, and you have learned to use it to shore up your weaknesses.</p>
