--- a/data/feats/ancestry-05-scA2b141swxUPw8M.htm
+++ b/data/feats/ancestry-05-scA2b141swxUPw8M.htm
@@ -6,9 +6,10 @@ PrereqFR: Plumes serrées
 
 ------ Benefits and spoiler ----
 Benefits: Garudas' marksmanship and magic are second nature to you.
-Avantage: Garudas' ; l'adresse au tir et la magie sont une seconde nature pour vous.
+Avantage: vous appliquez l'effet critique spécialisé en cas de coup critique avec un arc.
 
 ------ Description (en) ------
 <p>Garudas' marksmanship and magic are second nature to you. Whenever you critically hit using a bow, you apply the weapon's critical specialization effect.</p>
 ------ Description (fr) ------
-<p>L'adresse au tir des Garudas et la magie sont pour vous une seconde nature. Lorsque vous obtenez un coup critique en utilisant un arc, vous appliquez l'effet critique spécialisé de l'arme.</p>
+<p>L'adresse au tir des garudas et la magie sont pour vous une seconde nature.</p>
+<p>Lorsque vous obtenez un coup critique en utilisant un arc, vous appliquez l'effet critique spécialisé de l'arme.</p>
