--- a/data/feats/ancestry-05-TlMSleKR8Bh0EuSW.htm
+++ b/data/feats/ancestry-05-TlMSleKR8Bh0EuSW.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can extend your claws to aid you in climbing.
-Avantage: Vous pouvez étendre vos griffes pour vous aider à grimper.
+Avantage: Vous obtenez une Vitesse d'escalade de 3 m.
 
 ------ Description (en) ------
 <p>You can extend your claws to aid you in climbing. You gain a climb Speed of 10 feet.</p>
