--- a/data/feats/ancestry-05-tB6V6rWv8vAFsKsX.htm
+++ b/data/feats/ancestry-05-tB6V6rWv8vAFsKsX.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites fly out of your body, swarming around you in a cloud.
-Avantage: Vos nanites s'envolent de votre corps, formant un nuage autour de vous.
+Avantage: Vous êtes Masqué pendant un nombre de rounds égal à la moitié de votre niveau.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: Vos nanites s'envolent de votre corps, formant un nuage autour de vous
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vos nanites s'envolent de votre corps, dans un nuage formant une nuée. Vous êtes Masqué pendant un nombre de rounds égal à la moitié de votre niveau. Vous ne pouvez utiliser ce camouflage pour se Cacher ou Être furtif, comme à l'ordinaire pour le camouflage qui rendrent votre position évidente. Lorsque Voile de nanites est actif, vous ne pouvez utilisez d'autres capacités qui nécessitent l'utilisation de vos nanites.</p>
+<p>Vos nanites s'envolent de votre corps, dans un nuage formant un voile autour de vous.</p>
+<p>Vous êtes Masqué pendant un nombre de rounds égal à la moitié de votre niveau. Vous ne pouvez utiliser ce camouflage pour se Cacher ou Être furtif, comme à l'ordinaire pour un camouflage qui rend votre position évidente. Tant que Voile de nanites est actif, vous ne pouvez utiliser d'autres capacités qui nécessitent l'utilisation de vos nanites.</p>
