--- a/data/feats/ancestry-05-twnZopGlB392hmqH.htm
+++ b/data/feats/ancestry-05-twnZopGlB392hmqH.htm
@@ -14,5 +14,5 @@ Avantage: Là où d'autres gravent leur armure pour servir de conduit à leur im
 <p>A creature can disbelieve the illusion by Seeking or touching your armor. The DC equals your Will DC.</p>
 ------ Description (fr) ------
 <p>Où d'autres décorent leurs armures pour servir d'exutoire à leur imagination, votre esprit vif et votre personnalité audacieuse vous permettent de projeter un personnage plus adapté sur une armure manquant de lustre.</p>
-<p>Vous changez la forme et l'apparence de votre armure pour qu'elle apparaisse comme des habits ordinaires ou comme de beaux atours issus de votre imaginaire. Les statistiques de l'armure ne changent pas. Cet effet dure tant que vous restez conscient et que vous portez l'armure.</p>
+<p>Vous changez la forme et l'apparence de votre armure pour qu'elle apparaisse comme des habits ordinaires ou comme de beaux atours issus de votre imagination. Les statistiques de l'armure ne changent pas. Cet effet dure tant que vous restez conscient et que vous portez l'armure.</p>
 <p>Une créature peut déjouer l'illusion en Cherchant ou en touchant votre armure. Le DD est égal à votre DD de Volonté.</p>
