--- a/data/feats/ancestry-05-ThqMksZRxNB18ivs.htm
+++ b/data/feats/ancestry-05-ThqMksZRxNB18ivs.htm
@@ -2,14 +2,13 @@ Name: Advanced Targeting System
 Nom: Système de ciblage avancé
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your ocular processors are augmented with advanced targeting systems, which allow you to more easily pinpoint your enemy and read their movements.
-Avantage: Vos processeurs oculaires sont dotés de systèmes de ciblage avancés, qui vous permettent de repérer plus facilement votre ennemi et de lire ses mouvements.
+Avantage: Vous pouvez lancer Coup au but une fois par jour.
 
 ------ Description (en) ------
 <p>Your ocular processors are augmented with advanced targeting systems, which allow you to more easily pinpoint your enemy and read their movements. You can cast @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{True Strike} once per day as a 1st-level arcane innate spell.</p>
 ------ Description (fr) ------
-<p>Vos processeurs oculaires sont améliorés avec un système de ciblage avancé, qui vous permet de plus facilement identifier votre ennemi et lire leurs déplacements. Vous pouvez lancer @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{Coup au but} une fois par jour comme un sort inné arcanique de niveau 1.</p>
+<p>Vos processeurs oculaires sont améliorés par un système de ciblage avancé qui vous permet de plus facilement identifier votre ennemi et de prédire ses déplacements. Vous pouvez lancer @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{Coup au but} une fois par jour comme un sort inné arcanique de niveau 1.</p>
