--- a/data/feats/ancestry-05-UuVz1QY7QXD5cnLu.htm
+++ b/data/feats/ancestry-05-UuVz1QY7QXD5cnLu.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can fly through the air in short bursts at half your land Speed.
-Avantage: Vous pouvez voler dans les airs en courtes rafales à la moitié de votre vitesse terrestre.
+Avantage: Une fois par round, vous pouvez voler dans les airs à la moitié de votre vitesse terrestre.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
@@ -15,4 +15,4 @@ Avantage: Vous pouvez voler dans les airs en courtes rafales à la moitié de vo
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par round</p>
 <hr />
-<p>Vous pouvez voler à travers les airs par petits sauts de lea moitié de votre Vitesse au sol. Si vous ne terminez pas votre déplacement sur un sol solide, vous chutez à la fin de votre tour.</p>
+<p>Vous pouvez voler à travers les airs par petits sauts de la moitié de votre Vitesse au sol. Si vous ne terminez pas votre déplacement sur un sol solide, vous chutez à la fin de votre tour.</p>
