--- a/data/feats/ancestry-05-VNmmHrMAVk3Tiw1d.htm
+++ b/data/feats/ancestry-05-VNmmHrMAVk3Tiw1d.htm
@@ -6,7 +6,7 @@ PrereqFR: familiarité avec les armes kobolds
 
 ------ Benefits and spoiler ----
 Benefits: You've learned devious tactics with your kobold weapons.
-Avantage: Tu as appris des tactiques sournoises avec tes armes kobolds.
+Avantage: Vous appliquez l'effet critique spécialisé des armes des kobolds en cas de coup critique.
 
 ------ Description (en) ------
 <p>You’ve learned devious tactics with your kobold weapons. Whenever you critically hit with a crossbow, greatpick, light pick, pick, spear, or kobold weapon, you apply the weapon’s critical specialization effect.</p>
