--- a/data/feats/ancestry-05-X6tVQ5S7H7GuCZux.htm
+++ b/data/feats/ancestry-05-X6tVQ5S7H7GuCZux.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes tengu
 
 ------ Benefits and spoiler ----
 Benefits: You've learned techniques for using blades and other tengu weapons.
-Avantage: Tu as appris des techniques pour utiliser les lames et autres armes tengu.
+Avantage: En cas de coup critique, vous appliquez l'effet critique spécialisé des armes tengus.
 
 ------ Description (en) ------
 <p>You've learned techniques for using blades and other tengu weapons. Whenever you critically hit using one of the weapons from your Tengu Weapon Familiarity, you apply the weapon's critical specialization effect.</p>
