--- a/data/feats/ancestry-05-uQGo33E4haaFNg6u.htm
+++ b/data/feats/ancestry-05-uQGo33E4haaFNg6u.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You avoid the attention of creatures focused on your allies.
-Avantage: Vous évitez l'attention des créatures qui se concentrent sur vos alliés.
+Avantage: Vous pouvez utiliser l'abri fourni par vos alliés pour vous Cacher.
 
 ------ Description (en) ------
 <p>You avoid the attention of creatures focused on your allies. You can use lesser cover from your allies to Hide.</p>
 ------ Description (fr) ------
-<p>Vous évitez l'attention de créatures concentrées sur vos alliés. Vous pouvez utiliser l'abri fourni par vos alliés pour vous Cacher.</p>
+<p>Vous évitez l'attention de créatures concentrées sur vos alliés.</p>
+<p>Vous pouvez utiliser l'abri fourni par vos alliés pour vous Cacher.</p>
