--- a/data/feats/ancestry-05-wigOSPSxXnapFxeh.htm
+++ b/data/feats/ancestry-05-wigOSPSxXnapFxeh.htm
@@ -6,9 +6,9 @@ PrereqFR: héritage tengu dentdechien
 
 ------ Benefits and spoiler ----
 Benefits: You can swing your beak to slash your foes when piercing attacks won't do.
-Avantage: Vous pouvez balancer votre bec pour trancher vos ennemis lorsque les attaques percutantes ne suffisent pas.
+Avantage: Votre attaque de bec à mains nues obtient le trait d'arme Polyvalent T.
 
 ------ Description (en) ------
 <p>You can swing your beak to slash your foes when piercing attacks won’t do. Your beak unarmed attack gains the versatile S weapon trait.</p>
 ------ Description (fr) ------
-<p>Vous pouvez blanacer votre bec pour trancher vos ennemis lorsque vos attaques perforantes n'y parviennent pas. Votre attaque de bec à mains nues obtient le trait d'arme Polyvalent T.</p>
+<p>Vous pouvez balancer votre bec pour trancher vos ennemis lorsque vos attaques perforantes n'y parviennent pas. Votre attaque de bec à mains nues obtient le trait d'arme Polyvalent T.</p>
