--- a/data/feats/ancestry-05-wjhhlh82MABhfxCO.htm
+++ b/data/feats/ancestry-05-wjhhlh82MABhfxCO.htm
@@ -1,13 +1,12 @@
 Name: Strix Vengeance
-Nom: Vengeance Strix
+Nom: Vengeance strix
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You dedicate yourself to destroying those who harm your kin.
-Avantage: Vous vous consacrez à la destruction de ceux qui font du mal à votre famille.
+Avantage: Vous infligez plus de dégâts à un ennemi qui vous porte un coup critique ou à un allié Strix. 
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per 10 minutes</p>
@@ -18,4 +17,5 @@ Avantage: Vous vous consacrez à la destruction de ceux qui font du mal à votre
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
 <p><strong>Déclencheur</strong> Vous, ou un allié Strix que vous pouvez voir, subissez des dégâts par un coup critique d'un ennemi.</p>
 <hr />
-<p>Vous vous dévouez pour détruire ceux qui ont blessé les vôtres. Jusqu'à la fin de votre prochain tour, vous infligez +1d6 dégâts supplémentaires sur les Frappes contre l'ennemi déclencheur. Le bonus passe à +2d6 si vous utilisez une @Compendium[pf2e.equipment-srd.DxCuJKynlnMQZHgp]{Frappe} d'arme ou une attaque à mains nues et +3d6 si vous utilisez une attaque avec une arme ou une attaque à mains nues de @Compendium[pf2e.equipment-srd.woxl2FrrgAcJDu0t]{Frappe (Majeure)}.</p>
+<p>Vous vous dévouez pour détruire ceux qui ont blessé les vôtres.</p>
+<p>Jusqu'à la fin de votre prochain tour, vous infligez +1d6 dégâts supplémentaires sur les Frappes contre l'ennemi déclencheur. Le bonus passe à +2d6 si vous utilisez une @Compendium[pf2e.equipment-srd.DxCuJKynlnMQZHgp]{Frappe} d'arme ou une attaque à mains nues et +3d6 si vous utilisez une attaque avec une arme ou une attaque à mains nues de @Compendium[pf2e.equipment-srd.woxl2FrrgAcJDu0t]{Frappe (Majeure)}.</p>
