--- a/data/feats/ancestry-05-VLCAFIXzUtiv1VuE.htm
+++ b/data/feats/ancestry-05-VLCAFIXzUtiv1VuE.htm
@@ -1,14 +1,15 @@
 Name: Flexible Tail
-Nom: Queue suple
+Nom: Queue souple
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can perform simple Interact actions with your tail, such as opening an unlocked door.
-Avantage: Vous pouvez effectuer des actions simples d'interaction avec votre queue, comme ouvrir une porte non verrouillée.
+Avantage: Votre queue peut accomplir des actions d'interactions simples.
 
 ------ Description (en) ------
 <p>You can perform simple Interact actions with your tail, such as opening an unlocked door. Your tail can’t perform actions that require fingers or significant manual dexterity, including any action that would require a check to accomplish, and you can’t use it to hold items.</p>
 ------ Description (fr) ------
-<p>Vous pouvez accomplir les actions de simples Interactions avec votre queue, tel qu'ouvrir une porte déverouillée. Votre queue ne peut accomplis des actions qui nécessitent des doigts ou une dextérité manuelle significative, incluant toute action qui devrait nécessiter un test pour l'accomplir et vous ne pouvez l'utiliser pour tenir desobjets.</p>
+<p>Vous pouvez accomplir les actions de simples Interactions avec votre queue, tel qu'ouvrir une porte déverrouillée.</p>
+<p>Votre queue ne peut accomplir d'actions qui nécessitent des doigts ou une dextérité manuelle significative, incluant toute action qui devrait nécessiter un test pour l'accomplir et vous ne pouvez l'utiliser pour tenir des objets.</p>
