--- a/data/feats/ancestry-05-VQmKNh0QPHzYMmee.htm
+++ b/data/feats/ancestry-05-VQmKNh0QPHzYMmee.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have the power to shatter the earth into a shape of your devising.
-Avantage: Vous avez le pouvoir de briser la terre en une forme de votre choix.
+Avantage: Vous créez un terrain difficile dans une émanation de 1,5 m centré sur un coin de votre case.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once every 10 minutes</p>
@@ -15,4 +15,5 @@ Avantage: Vous avez le pouvoir de briser la terre en une forme de votre choix.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
 <hr />
-<p>Vous avez le pouvoir de briser la terre en une forme de votre invention. Vous brisez le sol en dessous de vous créant un terrain difficile dans une émanation de 1,5 m centré sur un coin de votre case.</p>
+<p>Vous avez le pouvoir de briser la terre en une forme de votre invention.</p>
+<p>Vous brisez le sol en dessous de vous créant un terrain difficile dans une émanation de 1,5 m centré sur un coin de votre case.</p>
