--- a/data/feats/ancestry-05-WPz97m5FNlbLIQ6p.htm
+++ b/data/feats/ancestry-05-WPz97m5FNlbLIQ6p.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can transform into a specific, curious-looking human form.
-Avantage: Vous pouvez vous transformer en une forme humaine spécifique et curieuse.
+Avantage: Vous pouvez adopter une forme humaine spécifique et curieuse.
 
 ------ Description (en) ------
 <p>@Compendium[pf2e.feats-srd.WPz97m5FNlbLIQ6p]{Long-Nosed Form}</p>
@@ -16,4 +16,4 @@ Avantage: Vous pouvez vous transformer en une forme humaine spécifique et curie
 ------ Description (fr) ------
 <p>Vous pouvez vous transformer et adopter une forme humaine spécifique à l'aspect curieux. Cette forme humaine a le même âge et type de corps que lorsque vous êtes sous votre forme tengu et approximativement les mêmes traits physiques, comme la taille, bien que votre nez soit aussi long que votre bec et que la couleur de votre peau ait une teinte rougeâtre, quelle que soit la couleur de peau de votre forme humaine.</p>
 <p>Utiliser Forme à long nez compte comme la création d'un déguisement lorsqu'il s'agit d'utiliser la Duperie pour @Compendium[pf2e.actionspf2e.AJstokjdG6iDjVjE]{Vous déguiser}. Compte tenu de votre transformation imparfaite, votre transformation ne trompe pas automatiquement le DD de Perception lorsqu'il s'agit de déterminer si vous êtes humain, bien que vous puissiez être capable d'expliquer ou de cacher vos traits tengu.</p>
-<p>Vous perdez votre attaque à mains nues de bec sous votre forme humaine ainsi que toute autre Frappe à mains nues que vous avez obtenu du fait de votre héritage tengu ou d'un don d'ascendance. Vous pouvez rester sous la forme humaine indéfiniment et pouvez vous transformer en votre forme tengu en utilisant de nouveau cette action.</p>
+<p>Vous perdez votre attaque à mains nues de bec sous votre forme humaine ainsi que toute autre Frappe à mains nues que vous avez obtenu du fait de votre héritage tengu ou d'un don ancestral. Vous pouvez rester sous la forme humaine indéfiniment et pouvez reprendre votre forme tengu en utilisant de nouveau cette action.</p>
