--- a/data/feats/ancestry-05-ulrGnvF0KAgEaifX.htm
+++ b/data/feats/ancestry-05-ulrGnvF0KAgEaifX.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: When physically outmatched, you fight with unexpected ferocity.
-Avantage: Quand vous êtes physiquement dépassé, vous vous battez avec une férocité inattendue.
+Avantage: L'adversaire qui vous porte un coup critique est pris au dépourvu pendant 1 round.
 
 ------ Description (en) ------
 <p>When physically outmatched, you fight with unexpected ferocity. If a foe of a larger size than you critically hits and damages you, that foe is @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} to you for 1 round.</p>
 ------ Description (fr) ------
-<p>Lorsque vous êtes physiquement surclassé, vous combattez avec une férocité inattentude.</p>
+<p>Lorsque vous êtes physiquement surclassé, vous combattez avec une férocité inattendue.</p>
 <p>Si un adversaire d'une taille plus grande que vous obtient un coup critique et vous fait subir des dégâts, cet adversaire est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} par rapport à vous pendant 1 round.</p>
