--- a/data/feats/ancestry-05-vdowlFFknihiz5pm.htm
+++ b/data/feats/ancestry-05-vdowlFFknihiz5pm.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your ordered physiology rejects unwelcome elements.
-Avantage: Votre physiologie ordonnée rejette les éléments indésirables.
+Avantage: Vous pouvez tenter de mettre fin à une maladie, un poisons et aux dégâts persistants une fois par jour.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -18,9 +18,9 @@ Avantage: Votre physiologie ordonnée rejette les éléments indésirables.
 </ul>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Conditions</strong> Vous  êtes affligé par une maladie ou un poison ou subissez des dégâts persistants.Votre physiologie ordonnée rejette les éléments malvenus. Choisissez un.</p>
+<p><strong>Conditions</strong> Vous  êtes affligé par une maladie ou un poison ou subissez des dégâts persistants. Votre physiologie ordonnée rejette les éléments malvenus. Choisissez en un.</p>
 <hr />
 <ul>
-<li><strong>Maladie ou poison</strong> Tentez un jet de sauvegarde contre l'affliction à son stade actuel. En cas d'échec, le stade de l'affliction n'augmente pas mais vous subissez les effetsdu stade auquel vous étiez. En cas d'échec critique, le stade ne s'accroît que de 1.</li>
-<li><strong>Dégâts persistants</strong> Faites un test nu contre un DD10 pour récupérer de dégâts persistants.</li>
+<li><strong>Maladie ou poison</strong> Tentez un jet de sauvegarde contre l'affliction à son stade actuel. En cas d'échec, le stade de l'affliction n'augmente pas mais vous subissez les effets du stade auquel vous étiez. En cas d'échec critique, le stade ne s'accroît que de 1.</li>
+<li><strong>Dégâts persistants</strong> Faites un test nu contre un DD10 pour mettre fin aux dégâts persistants.</li>
 </ul>
