--- a/data/feats/ancestry-05-vxE9hBKB6F2ctOX3.htm
+++ b/data/feats/ancestry-05-vxE9hBKB6F2ctOX3.htm
@@ -6,7 +6,7 @@ PrereqFR: Masque de guerre orc
 
 ------ Benefits and spoiler ----
 Benefits: Your warmask projects a white-hot fury that attempts to vaporize the offending magic.
-Avantage: Votre masque chaud projette une furie chauffée à blanc qui tente de vaporiser la magie incriminée.
+Avantage: En cas d'échec contre un sort de la tradition de votre masque de guerre, vous pouvez relancer un jet échoué avec un bonus de circonstances de +2.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -17,6 +17,7 @@ Avantage: Votre masque chaud projette une furie chauffée à blanc qui tente de 
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Vous manquez un jet de sauvegarde contre un effet de la tradition magique de votre <em>masque de guerre</em>.</p>
-<p><strong>Conditions</strong> Vous portez votre <em>masque de guerre</em>.</p>
+<p><strong>Conditions</strong> Vous portez votre masque de guerre.</p>
 <hr />
-<p>Votre <em>masque de guerre</em> projette une furie chauffé à blanc qui tente de vaporiser la magie incriminée. Vous relancez le test déclencheur avec un bonus de circonstances de +2, mais vous devez utiliser le nouveau résultat même s'il est pire que votre premier.</p>
+<p>Votre masque de guerre projette une colère furieuse chauffée à blanc qui tente de vaporiser la magie incriminée.</p>
+<p>Vous relancez le test déclencheur avec un bonus de circonstances de +2, mais vous devez utiliser le nouveau résultat même s'il est pire que votre premier.</p>
