--- a/data/pathfinder-bestiary-2/SY8pvLPqc2EgP9Xj.htm
+++ b/data/pathfinder-bestiary-2/SY8pvLPqc2EgP9Xj.htm
@@ -1,8 +1,8 @@
 Name: Soul Eater
 Nom: Dévoreur d'âmes
-État: libres
+État: libre
 
 ------ Description (en) ------
 Only the most desperate or foolhardy conjurers call upon the aid of these strange fiends from the inky swamps of Abaddon.<br /><br />
 ------ Description (fr) ------
-Seuls les invocateurs les plus désespérés ou les plus téméraires font appel à ces étranges monstres venus des marais d'Abaddon.<br /><br />
+Seuls les invocateurs les plus désespérés ou les plus téméraires font appel à ces étranges monstres venus des marais couleur d'encre d'Abaddon.<br /><br />
