uniformisation des avantages

--- a/data/feats/ancestry-05-FLuv8uI1KoodNgY4.htm
+++ b/data/feats/ancestry-05-FLuv8uI1KoodNgY4.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes gobelines
 
 ------ Benefits and spoiler ----
 Benefits: You know how to wield your people’s vicious weapons.
-Avantage: Vous appliquez l’effet critique spécialisé des armes gobelines en cas de coup critique.
+Avantage: En cas de coup critique avec une arme gobeline, vous appliquez l’effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You know how to wield your people's vicious weapons. Whenever you score a critical hit using a goblin weapon, you apply the weapon's critical specialization effect.</p>
