--- a/data/feats/ancestry-05-XM4zR0q9rBxjR3lG.htm
+++ b/data/feats/ancestry-05-XM4zR0q9rBxjR3lG.htm
@@ -6,7 +6,7 @@ PrereqFR: Voyant pénombral
 
 ------ Benefits and spoiler ----
 Benefits: Zon-Kuthon smiles upon you—even if you curse his name—granting you pitch-black eyes that allow you to see in shadows and darkness.
-Avantage: Zon-Kuthon vous sourit - même si vous maudissez son nom - et vous offre des yeux noirs qui vous permettent de voir dans les ombres et les ténèbres.
+Avantage: Vous obtenez Vision dans le noir.
 
 ------ Description (en) ------
 <p>@Compendium[pf2e.deities.ZfN7jkK6boU1FuiS]{Zon-Kuthon} smiles upon you-even if you curse his name-granting you pitch-black eyes that allow you to see in shadows and darkness. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
