--- a/data/feats/ancestry-05-XYtnVNKt6uPcRrdH.htm
+++ b/data/feats/ancestry-05-XYtnVNKt6uPcRrdH.htm
@@ -6,11 +6,11 @@ PrereqFR: héritage gobelin à queue ou gobelin arboricole
 
 ------ Benefits and spoiler ----
 Benefits: Your time in forest or jungle canopies has taught you how to scramble across branches with sure feet.
-Avantage: Le temps que vous avez passé dans la forêt ou la jungle vous a appris à grimper sur les branches d'un pied sûr.
+Avantage: Vous obtenez une vitesse d'escalade de 3 m et même davantage.
 
 ------ Description (en) ------
 <p>Your time in forest or jungle canopies has taught you how to scramble across branches with sure feet. You gain a climb Speed of 10 feet. If you also have the @Compendium[pf2e.feats-srd.bo4JG09pkoS7ywSZ]{Cave Climber} ancestry feat, your total climb Speed increases to your land Speed when climbing trees.</p>
 ------ Description (fr) ------
-<p>Le temps passé en forêt ou dans les canopées des jungles vous a appris à crapahuter dans les branches avec un pied assuré.</p>
+<p>Le temps passé en forêt ou dans les canopées des jungles vous a appris à crapahuter dans les branches avec assurance.</p>
 <p>Vous gagnez une vitesse d'escalade de 3 m.</p>
 <p>si vous possédez aussi le don ancestral @Compendium[pf2e.feats-srd.bo4JG09pkoS7ywSZ]{Grimpeur des cavernes}, votre vitesse d'escalade augmente pour atteindre votre vitesse de déplacement lorsque vous grimpez aux arbres.</p>
