--- a/data/feats/ancestry-05-scA2b141swxUPw8M.htm
+++ b/data/feats/ancestry-05-scA2b141swxUPw8M.htm
@@ -6,7 +6,7 @@ PrereqFR: Plumes serrées
 
 ------ Benefits and spoiler ----
 Benefits: Garudas' marksmanship and magic are second nature to you.
-Avantage: vous appliquez l'effet critique spécialisé en cas de coup critique avec un arc.
+Avantage: En cas de coup critique avec un arc, vous appliquez l'effet critique spécialisé.
 
 ------ Description (en) ------
 <p>Garudas' marksmanship and magic are second nature to you. Whenever you critically hit using a bow, you apply the weapon's critical specialization effect.</p>
