--- a/data/feats/ancestry-05-2kwLzw618QaIHOap.htm
+++ b/data/feats/ancestry-05-2kwLzw618QaIHOap.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes des génies
 
 ------ Benefits and spoiler ----
 Benefits: Whenever you critically hit using a falchion , ranseur , scimitar , trident , or a geniekin weapon, you apply the weapon's critical specialization effect .
-Avantage: Lorsque vous infligez un coup critique à l'aide d'une arme de génie, vous appliquez l'effet de critique spécialisé de l'arme.
+Avantage: En cas de coup critique avec une arme de génie, vous appliquez l'effet critique spécialisé.
 
 ------ Description (en) ------
 <p>Whenever you critically hit using a @Compendium[pf2e.equipment-srd.XGtIUZ4ZNKuFx1uL]{Falchion}, @Compendium[pf2e.equipment-srd.UfurZQK6H6SgOjqe]{Ranseur}, @Compendium[pf2e.equipment-srd.grmaV4GdoGD7sKbn]{Scimitar}, @Compendium[pf2e.equipment-srd.FJrsDoaIXksVjld9]{Trident}, or a geniekin weapon, you apply the weapon’s critical specialization effect.</p>
