--- a/data/feats/ancestry-05-8Mo0fKRAz1TVbrr1.htm
+++ b/data/feats/ancestry-05-8Mo0fKRAz1TVbrr1.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes des hommes-félins
 
 ------ Benefits and spoiler ----
 Benefits: You know how to efficiently use weapons that rake across your enemies.
-Avantage: vous appliquez l'effet de critique spécialisé des armes des hommes-félins.
+Avantage: En cas de coup critique avec les armes des hommes-félins, vous appliquez l'effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You know how to efficiently use weapons that rake across your enemies. Whenever you critically hit using a catfolk weapon or one of the weapons listed in Catfolk Weapon Familiarity, you apply the weapon's critical specialization effect.</p>
