--- a/data/feats/ancestry-05-B6eoSmowSFNlhj9h.htm
+++ b/data/feats/ancestry-05-B6eoSmowSFNlhj9h.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes hobgobelines
 
 ------ Benefits and spoiler ----
 Benefits: You know how to efficiently utilize the weapons soldiers use in close quarters.
-Avantage: Vous appliquez l'effet critique spécialisé des armes hobgobelines.
+Avantage: En cas de coup critique avec une arme hobgobeline, vous appliquez l'effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You know how to efficiently utilize the weapons soldiers use in close quarters. Whenever you score a critical hit using a weapon of the polearm, spear, or sword group, you apply the weapon's critical specialization effect.</p>
