--- a/data/feats/ancestry-05-Y3IUIsopvN13vEvZ.htm
+++ b/data/feats/ancestry-05-Y3IUIsopvN13vEvZ.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes orques
 
 ------ Benefits and spoiler ----
 Benefits: You are brutally efficient with the weapons of your orc ancestors.
-Avantage: Vous êtes brutalement efficace avec les armes de vos ancêtres orcs.
+Avantage: En cas de coup critique avec une arme orque, vous appliquez l’effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You are brutally efficient with the weapons of your orc ancestors. Whenever you critically hit using a falchion, a greataxe, or an orc weapon, you apply the weapon's critical specialization effect.</p>
