--- a/data/feats/ancestry-05-iCzJRywykSFwLto0.htm
+++ b/data/feats/ancestry-05-iCzJRywykSFwLto0.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes des vanths
 
 ------ Benefits and spoiler ----
 Benefits: You've trained in the finer points of dealing death.
-Avantage: En cas de coup critique, vous appliquez l'effet critique spécialisé si vous utilisez un bô, un arc long, un arc long composite, un bâton ou une faux.
+Avantage: En cas de coup critique avec un bô, un arc long, un arc long composite, un bâton ou une faux, vous appliquez l'effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You’ve trained in the finer points of dealing death. Whenever you critically hit using a bo staff, longbow, composite longbow, scythe, or staff, you apply the weapon’s critical specialization effect.</p>
