--- a/data/feats/ancestry-05-vW7tWi3jK7z2Clen.htm
+++ b/data/feats/ancestry-05-vW7tWi3jK7z2Clen.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes naines
 
 ------ Benefits and spoiler ----
 Benefits: You’ve learned cunning techniques to get the best effects out of your dwarven weapons.
-Avantage: Vous appliquez l’effet critique spécialisé des armes naines en cas de coup critique.
+Avantage: En cas de coup critique avec une arme naine, vous appliquez l’effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You've learned cunning techniques to get the best effects out of your dwarven weapons. Whenever you critically hit using a battle axe, pick, warhammer, or a dwarf weapon, you apply the weapon's critical specialization effect.</p>
