--- a/data/feats/ancestry-05-y0Ru2hRmoRwkRsxZ.htm
+++ b/data/feats/ancestry-05-y0Ru2hRmoRwkRsxZ.htm
@@ -1,14 +1,15 @@
 Name: Tongue Disarm
-Nom: Désamrer avec la langue
+Nom: Désarmer avec la langue
 PrereqEN: trained in Athletics|Lightning Tongue
 PrereqFR: qualifié en Athlétisme|Langue éclair
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You lash out with your tongue to disarm your foe.
-Avantage: Vous donnez des coups de langue pour désarmer votre adversaire.
+Avantage: Vous pouvez Désarmer une créature dans les 3 m, sans avoir de main libre.
 
 ------ Description (en) ------
 <p>You lash out with your tongue to disarm your foe. You attempt to Disarm a creature within 10 feet, ignoring the requirement that you must have at least one hand free.</p>
 ------ Description (fr) ------
-<p>Vous rrelâchez votre lanque pour désarmer votre ennemi. Vous tentez de Désarmer une créature dans les 3 m, en ignorant la condition d'avoir au moins une main libre.</p>
+<p>Vous déroulez votre langue pour désarmer votre ennemi.</p>
+<p>Vous tentez de Désarmer une créature dans les 3 m, en ignorant la condition d'avoir au moins une main libre.</p>
